# mamba-regression

./: .gitignore  README.md  pyproject.toml
notebooks/: m4.ipynb  test.ipynb
src/data/: tsf_loader.py
