[tool.poetry]
name = "mamba-regression"
version = "0.1.0"
description = ""
authors = ["Ron Budnar <budnarr@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.1"
polars = "^0.20.13"
mypy = "^1.8.0"
ruff = "^0.3.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
torch = "^2.2.1"
packaging = "^23.2"
setuptools = "^69.1.1"
wheel = "^0.42.0"
ipywidgets = "^8.1.2"
lightning = "^2.2.0.post0"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
